css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap");

* {
  box-sizing: border-box;
}

:root {
  --white: hsl(0, 0%, 100%);
  --black: hsl(0, 0%, 0%);
  --darkGray: hsl(0, 0%, 55%);
  --verydarkgray: hsl(0, 0%, 41%);
}

body {
  margin: 0;
  padding: 0;
  font-size: 15px;
  font-family: "Alata", sans-serif;
  background-color: var(--white);
}

a {
  text-decoration: none;
}

.container {
  display: flex;
  flex-direction: column;
  background-image: url(../images/desktop/image-hero.jpg);
  background-repeat: no-repeat;
  position: relative;
  height: 100vh;
  width: 100%;
  background-size: cover;
}

.container::before {
  content: "";
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  background-color: rgba(0, 0, 0, 0.4);
}

.header-menu {
  height: 100px;
  position: relative;
  justify-content: space-around;
  align-items: center;
  display: flex;
  margin-top: 30px;
}

.header-logo {
  width: 330px;
}

.nav {
  display: flex;
  height: 60px;
  width: 480px;
  align-items: center;
  justify-content: flex-end;
}

.nav-list {
  list-style-type: none;
  display: flex;
  gap: 1rem;
}

.nav span {
  color: var(--white);
  font-size: 14px;
  font-weight: 400;
}

.abrir-menu,
.cerrar-menu {
  display: none;
}

.main {
  width: 650px;
  height: 250px;
  position: absolute;
  bottom: 23%;
  left: 10%;
  border: 2px solid var(--white);
  padding: 0 60px;
}

.main-text {
  color: var(--white);
  font-size: 68px;
  font-family: "Josefin Sans", sans-serif;
  font-weight: 300;
  text-transform: uppercase;
  margin-top: 30px;
}

.column {
  width: 100%;
  height: 100%;
}

.section {
  width: 100%;
  height: 100vh;
  display: flex;
  position: relative;
  margin-bottom: 150px;
}

.articles {
  display: flex;
  flex-direction: row;
}

.articles-image {
  width: 700px;
  height: 100%;
  background-image: url(../images/desktop/image-interactive.jpg);
  background-repeat: no-repeat;
  background-size: contain;
  position: relative;
  margin: 145px 140px;
}

.articles-text {
  width: 600px;
  height: 350px;
  background: var(--white);
  position: absolute;
  bottom: 0;
  right: 5%;
  padding: 40px 65px 0 90px;
  margin-bottom: -50px;
}

.articles-text h2 {
  color: var(--black);
  font-size: 48px;
  font-family: "Josefin Sans", sans-serif;
  font-weight: 300;
  text-transform: uppercase;
}

.articles-text p {
  color: var(--darkGray);
}

.flex {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin: 0 135px 50px;
}

.flex h2 {
  color: var(--black);
  font-family: "Josefin Sans", sans-serif;
  font-size: 46px;
  font-weight: 400;
  text-transform: uppercase;
}

.flex button {
  color: var(--black);
  width: 130px;
  height: 40px;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 2px;
  text-transform: uppercase;
  background: var(--white);
}

.grid {
  max-width: 1075px;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  grid-gap: 1.25rem;
  margin: 0 auto 175px;
}

.grid h3 {
  color: var(--white);
  font-size: 32px;
  font-family: "Josefin Sans", sans-serif;
  font-weight: 300;
  text-transform: uppercase;
  margin-top: -100px;
}

.grid .image img {
  width: 100%;
  height: 100%;
}

.short-title {
  box-sizing: border-box;
  position: relative;
  width: 145px;
  height: 80px;
  margin-left: 45px;
}

.large-title {
  box-sizing: border-box;
  position: relative;
  width: 200px;
  height: 80px;
  margin-left: 45px;
}

.footer {
  width: 100%;
  background: var(--black);
  height: 230px;
  color: var(--white);
  display: flex;
  flex-direction: column;
}

.footer-menu {
  display: flex;
  width: 100%;
  justify-content: space-between;
  padding: 50px 0 20px;
}

.footer-logo {
  width: 500px;
  display: flex;
  justify-content: center;
  margin-left: -15px;
}

.footer-social {
  width: 380px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer-social a {
  padding: 0 8px;
}

.menu-bottom {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.footer-categories {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 735px;
}

.footer-categories p {
  padding: 0 20px;
  font-size: 14px;
  letter-spacing: 2px;
}

.attribution {
  display: flex;
  justify-content: center;
  width: 500px;
}

.attribution p {
  color: var(--verydarkgray);
}

@media (max-width: 900px) {
  .header-menu {
    height: 100px;
    position: relative;
    justify-content: space-between;
    display: flex;
    margin-top: 30px;
  }

  .header-logo {
    width: 200px;
    margin-left: 10px;
  }

  .nav {
    display: flex;
    height: 60px;
    width: 400px;
    align-items: center;
    justify-content: flex-start;
  }

  .main {
    width: 400px;
    height: 250px;
    position: absolute;
    bottom: 30%;
    left: 15%;
    border: 2px solid var(--white);
    padding: 10px 50px;
  }

  .main-text {
    color: var(--white);
    font-size: 42px;
    font-family: "Josefin Sans", sans-serif;
    font-weight: 300;
    text-transform: uppercase;
    margin-top: 30px;
  }

  .section {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    margin-bottom: 50px;
  }

  .articles {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .articles-image {
    width: 70%;
    height: 400px;
    background-image: url(../images/mobile/image-interactive.jpg);
    background-repeat: no-repeat;
    background-size: contain;
    margin: 50px 50px 0px;
  }

  .articles-text {
    display: flex;
    flex-direction: column;
    position: relative;
    width: 70%;
    height: 500px;
    background: var(--white);
    padding: 40px 65px 0 90px;
  }

  .articles-text h2 {
    color: var(--black);
    font-size: 28px;
    font-family: "Josefin Sans", sans-serif;
    font-weight: 300;
    text-transform: uppercase;
  }

  .flex {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin: 0 135px 150px;
  }

  .flex h2 {
    color: var(--black);
    font-family: "Josefin Sans", sans-serif;
    font-size: 32px;
    font-weight: 400;
    text-transform: uppercase;
  }
}

@media (max-width: 790px) {
  .footer-categories {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 400px;
  }
}

@media (max-width: 550px) {
  .container {
    display: flex;
    flex-direction: column;
    background-image: url(../images/mobile/image-hero.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    width: auto;
    height: 100vh;
  }

  .header-menu {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    padding: 4rem;
    margin: 0;
  }

  .header-logo {
    width: 200px;
    margin-left: -60px;
  }

  .header-logo.superponer {
    position: relative;
    z-index: 10;
  }

  .abrir-menu,
  .cerrar-menu {
    display: block;
    border: 0;
    font-size: 1.25rem;
    background-color: transparent;
    cursor: pointer;
  }

  .nav {
    opacity: 0;
    visibility: hidden;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: flex-start;
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    background-color: var(--black);
    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, 0.5);
    height: 100vh;
    width: 100vw;
    padding: 30px;
  }

  .nav.visible {
    opacity: 1;
    visibility: visible;
  }

  .nav-position {
    position: absolute;
    top: 20%;
    left: 0;
  }

  .nav-list {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
  }

  .nav-list li a {
    color: #ecececec;
  }

  .main {
    box-sizing: border-box;
    justify-content: center;
    width: 300px;
    height: 200px;
    border: 2px solid var(--white);
    padding: 0 20px;
  }

  .main.ocultar {
    opacity: 0;
    display: none;
  }

  .main-text {
    color: var(--white);
    font-size: 38px;
    font-family: "Josefin Sans", sans-serif;
    font-weight: 300;
    text-transform: uppercase;
    margin-top: 30px;
  }

  .articles-image {
    width: 80%;
    height: 200px;
  }

  .articles-text {
    display: flex;
    flex-direction: column;
    position: relative;
    width: 100%;
    height: 300px;
    background: var(--white);
    padding: 0px 5px 0 50px;
  }

  .flex {
    margin: 100px 50px;
  }

  .grid {
    max-width: 500px;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  }
}

/* at the final delete all the repeated code on small devices */

